--- a/room/templates/home.html
+++ b/room/templates/home.html
@@ -1,5 +1,23 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block contents %}
 <h1>home</h1>
+
+{%for room in rooms.all %}
+<div class="col-md-4">
+        <div class="card mb-4 shadow-sm">
+          <img src="{{room.mainimg.url}}" height=300> 
+          <div class="card-body">
+            <p class="card-text"> {{room.description}} </p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <a href = "{% url 'detail' room.id %}">상세보기</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+{% endfor %}
+
 {% endblock %}
