--- a/room/templates/detail.html
+++ b/room/templates/detail.html
@@ -21,7 +21,7 @@
   <div class = "container">
       
     <h1>{{room.title}}</h1>
-    <div align = "right">
+    <div sytle="text-align:right">
       <p>게시글 등록 날짜 : {{room.pub_date}} </p>
       <p>게시글 등록자 : </p>
     </div>
