--- a/room/templates/detail.html
+++ b/room/templates/detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+{% block contents %}
 <head>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -16,11 +17,11 @@
 </head>
 
 
-{% block contents %}
+
 <body>
   <div class = "container">
-      
-    <h1>{{room.title}}</h1>
+    <br><br><br><br>
+    <h1>{{room.title}}</h1><br><br>
     <div sytle="text-align:right">
       <p>게시글 등록 날짜 : {{room.pub_date}} </p>
       <p>게시글 등록자 : </p>
@@ -28,16 +29,16 @@
     
     <br><br>
     
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide" style="width:600px; height:auto; margin: 0 auto;" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="{{room.img1.url}}" class="d-block w-100" alt="...">
+          <img src="{{room.img1.url}}" class="d-block w-100" alt="image1">
         </div>
         <div class="carousel-item">
-          <img src="{{room.img2.url}}" class="d-block w-100" alt="...">
+          <img src="{{room.img2.url}}" class="d-block w-100" alt="image2">
         </div>
         <div class="carousel-item">
-          <img src="{{room.img3.url}}" class="d-block w-100" alt="...">
+          <img src="{{room.img3.url}}" class="d-block w-100" alt="image3">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -48,6 +49,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
+      <br><br>
     </div> 
       
     <div>
@@ -62,6 +64,7 @@
     <br><br>
 
     <button type = "button" class="btn btn-outline-dark"><a href = "{% url 'home'%}">홈으로 돌아가기</a></button>
+    <br><br><br>
   </div>
 
 </body>
