--- a/rentroomproject/templates/base.html
+++ b/rentroomproject/templates/base.html
@@ -16,7 +16,7 @@
             {% if user.is_authenticated %}
             <ul class="navbar-nav" style="display: inline-block">
             <li class="nav-item active" style="display: inline-block">
-                <a class="nav-link" href="#">방찾기 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'search' %}">방찾기 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" style="display: inline-block">
                 <a class="nav-link" href="#">관심목록</a>
