--- a/rentroomproject/templates/base.html
+++ b/rentroomproject/templates/base.html
@@ -10,6 +10,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
+<style>
+.nav-item{
+    margin-right: 10px;
+}
+</style>
 <body>
     <nav class="navbar navbar-light bg-white fixed-top" style="border-bottom: 1px solid rgb(235, 235, 235)">
         <a class="navbar-brand" href="{% url 'home' %}">RentRoom</a>
@@ -22,7 +27,7 @@
                 <a class="nav-link" href="#">관심목록</a>
             </li>
             <li class="nav-item" style="display: inline-block">
-                <a class="nav-link" href="{% url 'register' %}">방내놓기</a>
+                <a class="nav-link" href="{% url 'newroom' %}">방내놓기</a>
             </li>
             <li class="nav-item" style="display: inline-block">
                 <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}" tabindex="-1">로그아웃</a>
@@ -34,13 +39,13 @@
             {% else %}
             <ul class="navbar-nav" style="display: inline-block">
             <li class="nav-item active" style="display: inline-block">
-                <a class="nav-link" href="#">방찾기 <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'search' %}">방찾기 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" style="display: inline-block">
                 <a class="nav-link" href="#">관심목록</a>
             </li>
             <li class="nav-item" style="display: inline-block">
-                <a class="nav-link" href="{% url 'login' %}">방내놓기</a>
+                <a class="nav-link" href="{% url 'newroom' %}">방내놓기</a>
             </li>
             <li class="nav-item" style="display: inline-block">
                 <a class="nav-link" href="{% url 'signup' %}" tabindex="-1">회원가입</a>
@@ -52,8 +57,8 @@
             {% endif %}
         <!-- </div> -->
     </nav>
+    {% block contents %}
+    {% endblock %}
 </body>
 </html>
 
-{% block contents %}
-{% endblock %}
