--- a/rentroomproject/templates/base.html
+++ b/rentroomproject/templates/base.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="{% url 'search' %}">방찾기 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" style="display: inline-block">
-                <a class="nav-link" href="{% url 'cart' %}">관심목록</a>
+                <a class="nav-link" href="#">관심목록</a>
             </li>
             <li class="nav-item" style="display: inline-block">
                 <a class="nav-link" href="{% url 'newroom' %}">방내놓기</a>
@@ -49,7 +49,7 @@
                 <a class="nav-link" href="{% url 'search' %}">방찾기 <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item" style="display: inline-block">
-                <a class="nav-link" href="{% url 'cart' %}">관심목록</a>
+                <a class="nav-link" href="#">관심목록</a>
             </li>
             <li class="nav-item" style="display: inline-block">
                 <a class="nav-link" href="{% url 'newroom' %}">방내놓기</a>
